[metadata]
name = fluorescentneurosurgery
version = 0.0.1

[options]
install_requires =
    torch
    numpy
    matplotlib
    scipy
    torcheval
    wandb
    torchmetrics

packages = find:

[options.package_data]
fluorescentneurosurgery.data =
    *.mat

# [options.exlude_package_data]
# fluorescentneurosurgery.legacy.Matlab = 
#     *
